--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 			<div class="konten-box autoH">
 				<div id="menu" class="konten-box-menu">
 					<div id="menu-item">
-						<a href="#">
+						<a href="ahyar-0186.html">
 							<div class="konten-menu">
 								<div class="kotak-menu">
 									<div class="icon"><img src="img/menu1.jpg"></div>
 									<div class="overlay"></div>
-									<div class="menu-title">Menu 1</div>
+									<div class="menu-title">Naruto</div>
 								</div>
 							</div>
 						</a>
