mod about (ahyar)

--- a/tentang.html
+++ b/tentang.html
@@ -4,6 +4,62 @@
 	<title>a NIM | Tentang Kami</title>
 </head>
 <body>
-
+	<div id="mario">
+		<table>
+			<tr>
+				<td>Nama</td>
+				<td>:</td>
+				<td>MUHAMMAD AHYARUDDIN</td>
+			</tr>
+			<tr>
+				<td>NIM</td>
+				<td>:</td>
+				<td>195410186</td>
+			</tr>
+			<tr>
+				<td>Kelas</td>
+				<td>:</td>
+				<td>IF-4</td>
+			</tr>
+		</table>
+	</div>
+	<div id="dhani">
+		<table>
+			<tr>
+				<td>Nama</td>
+				<td>:</td>
+				<td>MUHAMMAD AHYARUDDIN</td>
+			</tr>
+			<tr>
+				<td>NIM</td>
+				<td>:</td>
+				<td>195410186</td>
+			</tr>
+			<tr>
+				<td>Kelas</td>
+				<td>:</td>
+				<td>IF-4</td>
+			</tr>
+		</table>
+	</div>
+	<div id="ahyar">
+		<table>
+			<tr>
+				<td>Nama</td>
+				<td>:</td>
+				<td>MUHAMMAD AHYARUDDIN</td>
+			</tr>
+			<tr>
+				<td>NIM</td>
+				<td>:</td>
+				<td>195410186</td>
+			</tr>
+			<tr>
+				<td>Kelas</td>
+				<td>:</td>
+				<td>IF-4</td>
+			</tr>
+		</table>
+	</div>
 </body>
 </html>
