Konten dari MARIO

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body class="gray bgSaitama">
+<body class="gray bgImg Saitama">
 	<div class="fullScreen">
 		<div id="top-bar">
 			<div class="float-right centerV">
@@ -30,22 +30,22 @@
 			<div class="konten-box autoH">
 				<div id="menu" class="konten-box-menu">
 					<div id="menu-item">
-						<a href="#">
+						<a href="opm.html">
 							<div class="konten-menu">
 								<div class="kotak-menu">
-									<div class="icon"><img src="img/menu1.jpg"></div>
+									<div class="icon"><img src="img/opm cover.jpg"></div>
 									<div class="overlay"></div>
-									<div class="menu-title">Menu 1</div>
+									<div class="menu-title">One Punch Man</div>
 								</div>
 							</div>
 						</a>
 						<div class="konten-menu"></div>
-						<a href="#">
+						<a href="maougakuin.html">
 							<div class="konten-menu">
 								<div class="kotak-menu">
-									<div class="icon"><img src="img/menu1.jpg"></div>
+									<div class="icon"><img src="img/maougakuin.jpg"></div>
 									<div class="overlay"></div>
-									<div class="menu-title">Menu 1</div>
+									<div class="menu-title">Maou Gakuin no Futekigousha</div>
 								</div>
 							</div>
 						</a>
