Styling tentang.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<div class="float-right centerV">
 				<div class="konten-top-bar page-lain">
 					<div class="konten-top-bar"><a href="tentang.html#mario">Mario</a></div>
-					<div class="konten-top-bar"><a href="tentang.html#dhani">Dhani</a></div>
+					<div class="konten-top-bar"><a href="tentang.html#dhani">Dani</a></div>
 					<div class="konten-top-bar"><a href="tentang.html#ahyar">Ahyar</a></div>
 					<div class="konten-top-bar"><a href="./">Home</a></div>
 				</div>
