--- a/tentang.html
+++ b/tentang.html
@@ -2,64 +2,78 @@
 <html>
 <head>
 	<title>a NIM | Tentang Kami</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
-	<div id="mario">
-		<table>
-			<tr>
-				<td>Nama</td>
-				<td>:</td>
-				<td>MUHAMMAD AHYARUDDIN</td>
-			</tr>
-			<tr>
-				<td>NIM</td>
-				<td>:</td>
-				<td>195410186</td>
-			</tr>
-			<tr>
-				<td>Kelas</td>
-				<td>:</td>
-				<td>IF-4</td>
-			</tr>
-		</table>
+<body id="noHome" class="gray bgImg Saitama">
+	<div id="top-bar">
+		<div class="float-right centerV">
+			<div class="konten-top-bar page-lain">
+				<div class="konten-top-bar"><a href="#mario">Mario</a></div>
+				<div class="konten-top-bar"><a href="#dhani">Dani</a></div>
+				<div class="konten-top-bar"><a href="#ahyar">Ahyar</a></div>
+				<div class="konten-top-bar"><a href="./">Home</a></div>
+			</div>
+			<div class="konten-top-bar">
+				<div class="profil"><img class="bundar zoom" src="img/opm fist50x50.jpg"></div>
+			</div>
+		</div>
 	</div>
-	<div id="dhani">
-		<table>
-			<tr>
-				<td>Nama</td>
-				<td>:</td>
-				<td>MUHAMMAD AHYARUDDIN</td>
-			</tr>
-			<tr>
-				<td>NIM</td>
-				<td>:</td>
-				<td>195410186</td>
-			</tr>
-			<tr>
-				<td>Kelas</td>
-				<td>:</td>
-				<td>IF-4</td>
-			</tr>
-		</table>
-	</div>
-	<div id="ahyar">
-		<table>
-			<tr>
-				<td>Nama</td>
-				<td>:</td>
-				<td>MUHAMMAD AHYARUDDIN</td>
-			</tr>
-			<tr>
-				<td>NIM</td>
-				<td>:</td>
-				<td>195410186</td>
-			</tr>
-			<tr>
-				<td>Kelas</td>
-				<td>:</td>
-				<td>IF-4</td>
-			</tr>
-		</table>
+	<div id="isi" class="kotak-identitas">
+		<div class="identitas">
+			<div id="mario">
+				<table>
+					<tr>
+						<td>Nama</td>
+						<td>MARIO</td>
+					</tr>
+					<tr>
+						<td>NIM</td>
+						<td>195410194</td>
+					</tr>
+					<tr>
+						<td>Kelas</td>
+						<td>IF-4</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<div class="identitas">
+			<div id="dhani">
+				<table>
+					<tr>
+						<td>Nama</td>
+						<td>AHMAD DANI YULIYANTO</td>
+					</tr>
+					<tr>
+						<td>NIM</td>
+						<td>195410190</td>
+					</tr>
+					<tr>
+						<td>Kelas</td>
+						<td>IF-4</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<div class="identitas">
+			<div id="ahyar">
+				<table>
+					<tr>
+						<td>Nama</td>
+						<td>MUHAMMAD AHYARUDDIN</td>
+					</tr>
+					<tr>
+						<td>NIM</td>
+						<td>195410186</td>
+					</tr>
+					<tr>
+						<td>Kelas</td>
+						<td>IF-4</td>
+					</tr>
+				</table>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
