--- a/opm.html
+++ b/opm.html
@@ -9,9 +9,9 @@
 	<div id="top-bar">
 		<div class="float-right centerV">
 			<div class="konten-top-bar page-lain">
-				<div class="konten-top-bar"><a href="tentang.html#Mario">Mario</a></div>
-				<div class="konten-top-bar"><a href="tentang.html#Ahmad">Ahmad</a></div>
-				<div class="konten-top-bar"><a href="tentang.html#Udin">Udin</a></div>
+				<div class="konten-top-bar"><a href="tentang.html#mario">Mario</a></div>
+				<div class="konten-top-bar"><a href="tentang.html#dhani">Dani</a></div>
+				<div class="konten-top-bar"><a href="tentang.html#ahyar">Ahyar</a></div>
 				<div class="konten-top-bar"><a href="./">Home</a></div>
 			</div>
 			<div class="konten-top-bar">
