--- a/opm.html
+++ b/opm.html
@@ -45,7 +45,7 @@
 								<div class="kotak-menu">
 									<div class="icon"><img src="img/maougakuin.jpg"></div>
 									<div class="overlay"></div>
-									<div class="menu-title">Maou Gakuin no Futekigousha</div>
+									<div class="menu-title">Maou Gakuin</div>
 								</div>
 							</a>
 						</div>
