--- a/ahyar-0186.html
+++ b/ahyar-0186.html
@@ -154,7 +154,7 @@
 	<h2>Kakashi Hatake</h2>
 	<img class="featured-images" src="img/kakashi.jpg">
 	<p>
-		Kakashi Hatake is the easygoing, smart leader of team 7, consisting of Naruto Uzumaki, Sasuke Uchiha, and Sakura Haruno. Kakashi had a dark past, but he didn't let that affect him as an adult. he was a very vital key for Naruto's success, training him to be a great ninja. Kakashi is a master of the Sharingan Mirror Wheel Eye, which he gained as a present from his late friend, Obito Uchiha. Kakashi's original eye was restored late into part 2 of the series. Kakashi is killed by Pain (Nagato), But is revived when Nagato uses Rinne Rebirth to restore everything. Kakashi precedes Tsunade as the sixth Hokage, In the later parts of Naruto Shippuden.
+		Kakashi Hatake is the easygoing, smart leader and also the sensei of team 7, consisting of Naruto Uzumaki, Sasuke Uchiha, and Sakura Haruno. Kakashi had a dark past, but he didn't let that affect him as an adult. he was a very vital key for Naruto's success, training him to be a great ninja. Kakashi is a master of the Sharingan Mirror Wheel Eye, which he gained as a present from his late friend, Obito Uchiha. Kakashi's original eye was restored late into part 2 of the series. Kakashi is killed by Pain (Nagato), But is revived when Nagato uses Rinne Rebirth to restore everything. Kakashi precedes Tsunade as the sixth Hokage, In the later parts of Naruto Shippuden.
 	</p>
 	
 </body>
